--- a/src/app/header/header-menu/header-menu.component.css
+++ b/src/app/header/header-menu/header-menu.component.css
@@ -3,8 +3,16 @@
   font-size: 12px;
 }
 
+.user-name {
+  display: none;
+}
+
 @media (min-width: 601px) {
   .menu-button {
     font-size: 16px;
+  }
+
+  .user-name {
+    display: initial;
   }
 }
